[gd_scene load_steps=23 format=3 uid="uid://dio5tw3p7syjk"]

[ext_resource type="Texture2D" uid="uid://clqvo44vnb734" path="res://assets/popsickle.png" id="1_2pyqo"]
[ext_resource type="Script" path="res://enemies/popsickle/popsickle.gd" id="1_eshyl"]
[ext_resource type="Texture2D" uid="uid://b5iochcnhcybq" path="res://assets/popsickle-Sheet.png" id="2_7n7fp"]
[ext_resource type="PackedScene" uid="uid://cnxxjdlmuf7bj" path="res://components/hurtbox.tscn" id="2_u0d5f"]
[ext_resource type="PackedScene" uid="uid://bk25ew5v8m2cm" path="res://components/health_component.tscn" id="3_6ojk0"]
[ext_resource type="Script" path="res://enemies/states/idle.gd" id="4_psphh"]
[ext_resource type="Script" path="res://enemies/states/move.gd" id="5_1qumu"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="5_55wln"]
[ext_resource type="Script" path="res://enemies/player_detection.gd" id="9_a0rgm"]
[ext_resource type="Script" path="res://enemies/blob_movement_component.gd" id="9_ox6ho"]
[ext_resource type="Script" path="res://enemies/states/attack_idle.gd" id="10_7nfy5"]
[ext_resource type="Script" path="res://enemies/states/attack_fire.gd" id="11_d5dom"]
[ext_resource type="PackedScene" uid="uid://brh4uqbad42km" path="res://components/weapon_component.tscn" id="12_v1shg"]
[ext_resource type="PackedScene" uid="uid://bpp055ril4sju" path="res://enemies/enemy_projectile.tscn" id="13_m8mom"]
[ext_resource type="PackedScene" uid="uid://csi0wrb84yqoo" path="res://components/UI/health_bar.tscn" id="14_wfnet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mtvh6"]
atlas = ExtResource("2_7n7fp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f13gj"]
atlas = ExtResource("2_7n7fp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m4vc"]
atlas = ExtResource("1_2pyqo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvxp4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtvh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f13gj")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m4vc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clxk5"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lath5"]
size = Vector2(16, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_jdcen"]
radius = 90.0

[node name="popsickle" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_eshyl")
player_node_name = "Rob"
fire_node_name = "fire"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_hvxp4")
animation = &"attack"
frame_progress = 0.637325
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_clxk5")
metadata/_edit_lock_ = true

[node name="health_component" parent="." instance=ExtResource("3_6ojk0")]
max_health = 5

[node name="Hurtbox" parent="." instance=ExtResource("2_u0d5f")]
collision_layer = 4
collision_mask = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_lath5")
metadata/_edit_lock_ = true

[node name="movement_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("5_55wln")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("move_state")]
script = ExtResource("4_psphh")
move_state = NodePath("../move")
time_to_move = 0.5
animation_name = "default"
move_speed = 100.0

[node name="move" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_1qumu")
idle_state = NodePath("../idle")
animation_name = "default"
move_speed = 100.0

[node name="movement_component" type="Node" parent="."]
script = ExtResource("9_ox6ho")

[node name="attack_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("5_55wln")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("attack_fire")]
script = ExtResource("10_7nfy5")
attack_fire = NodePath("../fire")
animation_name = "default"

[node name="fire" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("attack_idle")]
script = ExtResource("11_d5dom")
attack_idle = NodePath("../idle")
number_of_shots = 5.0
fire_rate = 0.25
animation_name = "default"

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource("9_a0rgm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource("CircleShape2D_jdcen")

[node name="weapon_component" parent="." instance=ExtResource("12_v1shg")]
bullet_scene = ExtResource("13_m8mom")

[node name="health_bar" parent="." instance=ExtResource("14_wfnet")]
offset_left = -10.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = -10.0
